--- a/paper1/report.bib
+++ b/paper1/report.bib
@@ -1,13 +1,13 @@
 @Article{Abril07,
   author 	= "Patricia S. Abril and Robert Plant",
-  title 	= "The patent holder's dilemma: Buy, sell, or troll?",
+  title 	= "How does the Netflix movie recommendation algorithm work?",
   journal 	= "Communications of the ACM",
   volume 	= "50",
   number 	= "1",
   month 	= jan,
   year 		= "2007",
   pages 	= "36--44",
-  doi 		= "10.1145/1188913.1188915",
-  url		= "http://doi.acm.org/10.1145/1219092.1219093",
+  doi 		= "",
+  url		= "https://www.quora.com/How-does-the-Netflix-movie-recommendation-algorithm-work",
   note		= "",
 }
