--- a/paper1/report.tex
+++ b/paper1/report.tex
@@ -44,7 +44,7 @@ ACM SIG Proceedings.
 
 \section{Introduction}
 
-\cite{Abril07}
+my introduction\cite{Abril07}
 
 \section{The Body of The Paper}
 
