chg:fix: fix template

--- a/paper1/report.tex
+++ b/paper1/report.tex
@@ -12,23 +12,79 @@
 \pagestyle{plain} % removes running headers
 
 \begin{document}
-\title{Big Data in Recommendation System}
+\title{My great Big Dat Paper}
 
 
-\author{Yujie Wu}
+\author{Ben Trovato}
 \orcid{1234-5678-9012}
 \affiliation{%
-  \institution{Indiana University Bloomington}
+  \institution{Institute for Clarity in Documentation}
   \streetaddress{P.O. Box 1212}
   \city{Dublin} 
   \state{Ohio} 
   \postcode{43017-6221}
 }
-\email{yujiwu@iu.edu}
+\email{trovato@corporation.com}
 
+\author{G.K.M. Tobin}
+\affiliation{%
+  \institution{Institute for Clarity in Documentation}
+  \streetaddress{P.O. Box 1212}
+  \city{Dublin} 
+  \state{Ohio} 
+  \postcode{43017-6221}
+}
+\email{webmaster@marysville-ohio.com}
+
+\author{Lars Th{\o}rv{\"a}ld}
+\affiliation{%
+  \institution{The Th{\o}rv{\"a}ld Group}
+  \streetaddress{1 Th{\o}rv{\"a}ld Circle}
+  \city{Hekla} 
+  \country{Iceland}}
+\email{larst@affiliation.org}
+
+\author{Valerie B\'eranger}
+\affiliation{%
+  \institution{Inria Paris-Rocquencourt}
+  \city{Rocquencourt}
+  \country{France}
+}
+\author{Aparna Patel} 
+\affiliation{%
+ \institution{Rajiv Gandhi University}
+ \streetaddress{Rono-Hills}
+ \city{Doimukh} 
+ \state{Arunachal Pradesh}
+ \country{India}}
+\author{Huifen Chan}
+\affiliation{%
+  \institution{Tsinghua University}
+  \streetaddress{30 Shuangqing Rd}
+  \city{Haidian Qu} 
+  \state{Beijing Shi}
+  \country{China}
+}
+
+\author{Charles Palmer}
+\affiliation{%
+  \institution{Palmer Research Laboratories}
+  \streetaddress{8600 Datapoint Drive}
+  \city{San Antonio}
+  \state{Texas} 
+  \postcode{78229}}
+\email{cpalmer@prl.com}
+
+\author{John Smith}
+\affiliation{\institution{The Th{\o}rv{\"a}ld Group}}
+\email{jsmith@affiliation.org}
+
+\author{Julius P.~Kumquat}
+\affiliation{\institution{The Kumquat Consortium}}
+\email{jpkumquat@consortium.net}
 
 % The default list of authors is too long for headers}
-\renewcommand{\shortauthors}{Y. Wu}
+\renewcommand{\shortauthors}{B. Trovato et al.}
 
 
 \begin{abstract}
@@ -37,17 +93,29 @@ somewhat loosely, to the formatting guidelines for
 ACM SIG Proceedings.
 \end{abstract}
 
-\keywords{I523-Big Data in Recommendation System, \LaTeX, text tagging}
+\keywords{ACM proceedings, \LaTeX, text tagging}
 
 
 \maketitle
 
 \section{Introduction}
 
-my introduction\cite{Abril07}
+The \textit{proceedings} are the records of a
+conference. ACM seeks to give these
+conference by-products a uniform, high-quality appearance.  To do
+this, ACM has some rigid requirements for the format of the
+proceedings documents: there is a specified format (balanced double
+columns), a specified set of fonts (Arial or Helvetica and Times
+Roman) in certain specified sizes, a specified live area, centered on
+the page, specified size of margins, specified column width and gutter
+size \cite{editor00}.
 
-\section{The Body of The Paper}
 
+\begin{acks}
+
+  The authors would like to thank 
+
+\end{acks}
 
 \bibliographystyle{ACM-Reference-Format}
 \bibliography{report} 
