--- a/paper1/report.bib
+++ b/paper1/report.bib
@@ -1,13 +1,20 @@
-@Article{Abril07,
-  author 	= "Patricia S. Abril and Robert Plant",
-  title 	= "How does the Netflix movie recommendation algorithm work?",
-  journal 	= "Communications of the ACM",
-  volume 	= "50",
-  number 	= "1",
-  month 	= jan,
-  year 		= "2007",
-  pages 	= "36--44",
-  doi 		= "",
-  url		= "https://www.quora.com/How-does-the-Netflix-movie-recommendation-algorithm-work",
-  note		= "",
+@Inbook{editor00,
+  author = 	 "",
+  editor =       "Ian Editor",
+  title =        "The title of book one",
+  subtitle =     "The book subtitle",
+  series =       "The name of the series one",
+  year =         "2007",
+  volume = 	 "9",
+  address =      "Chicago",
+  edition =      "1st.",
+  publisher =    "University of Chicago Press",
+  doi = 	 "10.1007/3-540-09237-4",
+  url = 	 "http://dx.doi.org/10.1007/3-540-09456-9",
+  chapter = 	 "",
+  pages = 	 "",
+  number = 	 "",
+  type = 	 "",
+  month = 	 "",
+  note = 	 "",
 }
