--- a/paper1/report.bib
+++ b/paper1/report.bib
@@ -1,20 +1,8 @@
-@Inbook{editor00,
-  author = 	 "",
-  editor =       "Ian Editor",
-  title =        "The title of book one",
-  subtitle =     "The book subtitle",
-  series =       "The name of the series one",
-  year =         "2007",
-  volume = 	 "9",
-  address =      "Chicago",
-  edition =      "1st.",
-  publisher =    "University of Chicago Press",
-  doi = 	 "10.1007/3-540-09237-4",
-  url = 	 "http://dx.doi.org/10.1007/3-540-09456-9",
-  chapter = 	 "",
-  pages = 	 "",
-  number = 	 "",
-  type = 	 "",
-  month = 	 "",
-  note = 	 "",
+@Misc{FY2016HHSFR,
+  author       = {Dennis Decoste, David Gleich, Tejaswi Kasturi, Sathiya Keerthi, Omid Madani, Seung-Taek Park, David M. Pennock, Corey Porter, Sumit Sanghai, Farial Shahnaz, Leonid Zhukov},
+  title        = {Recommender Systems Research at Yahoo! Research Labs},
+  howpublished = {Online},
+  month        = {1},
+  year         = {2005},
+  url          = {https://www.cs.purdue.edu/homes/dgleich/publications/decoste2005%20-%20yahoo%20recommender%20systems.pdf},
 }
