--- a/paper1/report.bib
+++ b/paper1/report.bib
@@ -1,4 +1,4 @@
-@Misc{FY2016HHSFR,
+@Misc{Yahoo,
   author       = {Dennis Decoste, David Gleich, Tejaswi Kasturi, Sathiya Keerthi, Omid Madani, Seung-Taek Park, David M. Pennock, Corey Porter, Sumit Sanghai, Farial Shahnaz, Leonid Zhukov},
   title        = {Recommender Systems Research at Yahoo! Research Labs},
   howpublished = {Online},
