--- a/paper1/report.bib
+++ b/paper1/report.bib
@@ -1,3 +1,12 @@
+@Misc{Reco1,
+  author       = {Geoffrey Fox},
+  title        = {Big Data Applications and Analytics Case Study: e-Commerce and Life Style Infomatics: Recommender Systems I},
+  howpublished = {Online},
+  month        = {9},
+  year         = {2017},
+  url          = {https://drive.google.com/file/d/0B6wqDMIyK2P7YkIwczVfQlJqVG8/view},
+}
+
 @Misc{Netflix,
   author       = {Xavier Amatriain},
   title        = {How does the Netflix movie recommendation algorithm work?},
@@ -7,29 +16,20 @@
   url          = {https://www.quora.com/How-does-the-Netflix-movie-recommendation-algorithm-work},
 }
 
-@Misc{Yahoo,
-  author       = {Dennis Decoste, David Gleich, Tejaswi Kasturi, Sathiya Keerthi, Omid Madani, Seung-Taek Park, David M. Pennock, Corey Porter, Sumit Sanghai, Farial Shahnaz, Leonid Zhukov},
-  title        = {Recommender Systems Research at Yahoo! Research Labs},
-  howpublished = {Online},
-  month        = {1},
-  year         = {2005},
-  url          = {https://www.cs.purdue.edu/homes/dgleich/publications/decoste2005%20-%20yahoo%20recommender%20systems.pdf},
-}
-
-@Misc{Reco1,
-  author       = {Geoffrey Fox},
-  title        = {Big Data Applications & Analytics Case Study: e-Commerce and Life Style Infomatics: Recommender Systems I},
-  howpublished = {Online},
-  month        = {9},
-  year         = {2017},
-  url          = {https://drive.google.com/file/d/0B6wqDMIyK2P7YkIwczVfQlJqVG8/view},
-}
-
 @Misc{Reco2,
   author       = {Geoffrey Fox},
-  title        = {Big Data Applications & Analytics Case Study: e-Commerce and Life Style Infomatics: Recommender Systems II},
+  title        = {Big Data Applications and Analytics Case Study: e-Commerce and Life Style Infomatics: Recommender Systems II},
   howpublished = {Online},
   month        = {9},
   year         = {2017},
   url          = {https://drive.google.com/file/d/0B6wqDMIyK2P7UVloVElaZ2FXcTg/view},
+}
+
+@Misc{Yahoo,
+  author       = {Dennis Decoste and David Gleich and Tejaswi Kasturi and Sathiya Keerthi and Omid Madani and Seung-Taek Park and David M. Pennock and Corey Porter and Sumit Sanghai and Farial Shahnaz and Leonid Zhukov},
+  title        = {Recommender Systems Research at Yahoo! Research Labs},
+  howpublished = {Online},
+  month        = {1},
+  year         = {2005},
+  url          = {https://www.cs.purdue.edu/homes/dgleich/publications/decoste2005\%20-\%20yahoo\%20recommender\%20systems.pdf},
 }
