fix input format

--- a/paper1/report.tex
+++ b/paper1/report.tex
@@ -1,17 +1,7 @@
 \documentclass[sigconf]{acmart}
 
-\usepackage{hyperref}
+\input{format/i523}
 
-\usepackage{endfloat}
-\renewcommand{\efloatseparator}{\mbox{}} % no new page between figures
-
-\usepackage{booktabs} % For formal tables
-
-\settopmatter{printacmref=false} % Removes citation information below abstract
-\renewcommand\footnotetextcopyrightpermission[1]{} % removes footnote with conference information in first column
-\pagestyle{plain} % removes running headers
-\usepackage{indentfirst}
- 
 \begin{document}
 \title{Big Data in Recommendation System}
 
