--- a/paper2/report.bib
+++ b/paper2/report.bib
@@ -1,15 +1,26 @@
+@Misc{C1,
+  author       = {James Grossman},
+  title        = {"Big Data": An Opportunity for Historians?},
+  howpublished = {Online},
+  month        = {3},
+  year         = {2012},
+  url          = {https://www.historians.org/publications-and-directories/perspectives-on-history/march-2012/big-data-an-opportunity-for-historians},
+}
 
+@Misc{C2,
+  author       = {BBC history},
+  title        = {The Rise and Fall of Titanic},
+  howpublished = {Online},
+  month        = {11},
+  year         = {2017},
+  url          = {http://www.bbc.co.uk/history/titanic},
+}
 
-@Article{abril07,
-  author 	= "Patricia S. Abril and Robert Plant",
-  title 	= "The patent holder's dilemma: Buy, sell, or troll?",
-  journal 	= "Communications of the ACM",
-  volume 	= "50",
-  number 	= "1",
-  month 	= jan,
-  year 		= "2007",
-  pages 	= "36--44",
-  doi 		= "10.1145/1188913.1188915",
-  url		= "http://doi.acm.org/10.1145/1219092.1219093",
-  note		= "",
+@Misc{C3,
+  author       = {Kaggle},
+  title        = {Titanic: Machine Learning from Disaster},
+  howpublished = {Online},
+  month        = {11},
+  year         = {2015},
+  url          = {https://www.kaggle.com/c/titanic},
 }
