--- a/paper2/report.bib
+++ b/paper2/report.bib
@@ -24,3 +24,12 @@
   year         = {2015},
   url          = {https://www.kaggle.com/c/titanic},
 }
+
+@Misc{C4,
+  author       = {Unknown},
+  title        = {ID3 algorithm},
+  howpublished = {Online},
+  month        = {10},
+  year         = {2017},
+  url          = {https://en.wikipedia.org/wiki/ID3_algorithm},
+}
