--- a/project/report.ipynb
+++ b/project/report.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 2,
    "metadata": {
     "scrolled": true
    },
@@ -222,7 +222,7 @@
        "[5 rows x 35 columns]"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -497,8 +497,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
-   "metadata": {},
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "X = df[['MSSubClass','LotArea','OverallQual','OverallCond','YearBuilt', 'YearRemodAdd','MasVnrArea','BsmtFinSF1','BsmtFinSF2', 'WoodDeckSF','OpenPorchSF','EnclosedPorch','3SsnPorch','ScreenPorch','PoolArea','MiscVal','MoSold','YrSold']]\n",
@@ -509,7 +511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -746,6 +748,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Here, we use Root Mean Squared Error (RMSE) which is the square root of the mean of the squared errors for error checking:\n",
+    "$$\\sqrt{\\frac 1n\\sum_{i=1}^n(y_i-\\hat{y}_i)^2}$$"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 59,
    "metadata": {},
@@ -763,6 +773,93 @@
     "import numpy as np\n",
     "\n",
     "print(np.sqrt(metrics.mean_squared_error(y_test, y_pred)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Using logistic Regression"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[135000 139400 215000  85000 259500 108480 161750  93000 103600 129500\n",
+      "  80000 112000 115000 194000 171000 145000 130250 130500 151000 395192\n",
+      " 135000 266500 335000 135000 197000 110000 116000 135000 139000  98000\n",
+      " 181000  52500 110000 161000 248328 149000 215000 112500 143000 138000\n",
+      " 224900  86000 215000 162900 190000 165500  79000  87000 135000 112000\n",
+      " 223000  85400  90000 145000 143000 129500 204900 145000 127500 275000\n",
+      " 194000 114500 157900 260400 143500 254900 180000 190000 223000 150000\n",
+      " 215000  89500 145000 276000 111250 220000 172500 118964 130500 127000\n",
+      " 137000 146000 196000 123600 380000 266500 229000 129900 324000 181000\n",
+      " 260400 144152 202500 279500 319000 190000 130500 167000 171000 140000\n",
+      " 142000 250000  98000 275000  79900 215000 193000 199900 139600 143000\n",
+      " 137450 185900 328900 215000 259500 205950  87000 143900 167240 127000\n",
+      " 101800 224900 196500 167000 108959 180000 162000 129900 176000 319000\n",
+      " 124500 155900 266000 106000 215000 147000 121600 110000 165000 176000\n",
+      "  79900 181000 195400 290000 315750 260400 153900 325624 112500 293077\n",
+      " 181000 141000 342643 139000 135000 325000 174000  82500  78000 131500\n",
+      " 120500 446261 378500 135000 191000 177500  79000  80000 258000 155900\n",
+      " 263000 220000 378500 165000 184900 214000 128500 165500 159000 185900\n",
+      " 160000 146000 240000 131500 328900 239000 166000 191000  80000 118000\n",
+      "  81000 325000 117500 222000 136905 202665 220000 266000 109500 244600\n",
+      " 181000 159500 140000  98000 195400 184900 378500 110000 200000 278000\n",
+      " 161500 135000 180500 144152 190000 114500 181134 297000 147000 143750\n",
+      " 155900 142000 107500  99500 117500 116050 115000 181000 215000 203000\n",
+      " 122000 138800 104900 315000 136905 169000 250000 149000 305900 149000\n",
+      " 164900 229000 181000 158000 144000 125500 145000 243000 130500 250000\n",
+      " 179900 158000 145000 117500 187500 145000 117000 130000 135000  99500\n",
+      " 215000  89000 143000 189950 154000 145000 163000 200000 181000 264132\n",
+      " 150000 289000 167000 137900  67000 145000 127500 141500 214000 151000\n",
+      " 209500 118000 161500 127500 143250 230000 290000 485000 191000  85000\n",
+      " 110000 173000]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.linear_model import LogisticRegression\n",
+    "logreg = LogisticRegression()\n",
+    "logreg.fit(X_train, y_train)\n",
+    "y_pred = logreg.predict(X_test)\n",
+    "print(y_pred)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Classification accuracy:\n",
+    "### Proportion of correct predictions\n",
+    "### Common evaluation metric for classification problems\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn import metrics\n",
+    "import numpy as np\n",
+    "print(metrics.accuracy_score(y_test, y_pred))"
    ]
   }
  ],
